# repai-mcp

./: .env.example  .gitignore  DEMO.md  Dockerfile  README.md  pyproject.toml
docs/: PRD.md
docs/issues/: 01-mcp-server-foundation.md  02-ops-notes-create-ops-note.md  03-investigate-user.md  04-retention-ops-read-tools.md  05-qualitative-cohort-sql-tools.md  06-llm-persona-layer.md  07-demo-seed-data.md  08-mcp-prompts-and-demo-md.md  README.md
scripts/: validate_demo_sql.py
src/repai_mcp/: audit.py  config.py  server.py  store.py  timeutil.py
src/repai_mcp/llm/: openrouter.py  persona.py
src/repai_mcp/queries/: commitment.py  signals.py  users.py
src/repai_mcp/tools/: cohort.py  health.py  investigate.py  ops_notes.py  retention.py
supabase/: demo-schema.sql  seed-demo.sql
supabase/migrations/: 20260610140000_add_ops_notes.sql
tests/: test_audit.py  test_cohort.py  test_commitment.py  test_config.py  test_health.py  test_investigate.py  test_llm_persona.py  test_ops_notes.py  test_retention.py  test_server.py  test_signals.py  test_users.py
