[project]
name = "repai-mcp"
version = "0.1.0"
description = "MCP server for Rep AI user insights and operations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp>=1.27.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "supabase>=2.31.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
repai-mcp = "repai_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/repai_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
